--- a/entries/Red-tailed-hawk.html
+++ b/entries/Red-tailed-hawk.html
@@ -18,63 +18,17 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/Kiara.css">
-  <link rel="stylesheet" href="../css/animals.css">
+  <link rel="stylesheet" href="../css/hawk.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.ico">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
 </head>
-<style>
-  
-  h1{color:blueviolet;
-    background-color:lightblue;
-    text-align: center;
-  }
-  #OwO {
-    color: brown;
-  }
-  .becomered{
-    color:red;
-    font-size:2em;
-  }
-  .becomebig{
-    font-size:3em;
-    text-align: center;
-  }
-</style>
 <body>
   <h1>Red Tailed Hawk</h1>
-<h1 class="becomered">Coexisting with Red-Tailed Hawks</h1>
-<header>
-  <article>
-  </header>
-  <p>
-    <pre>
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣤⣤⣤⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣤⣤⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⣿⡿⠿⠿⠛⠛⠛⠛⠻⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      ⠀⠀⠀⠀⣀⣀⣠⣤⡾⢿⣿⣿⠿⠟⠉⠉⠀⠀⣠⣴⣶⣖⠒⡤⠀⠠⢾⣿⣭⣭⣾⣛⣻⣿⣿⣿⣿⣯⣍⣛⡿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      ⠀⢀⡴⠛⠉⢁⣀⠀⢤⡀⠹⣇⠀⠢⠂⠀⠤⣾⠹⣿⣷⣟⡴⠃⠀⣀⣼⣭⣟⠛⠯⠭⠼⠿⢿⣿⣿⣿⣿⣿⣯⣽⣻⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      ⢀⡟⠁⢀⠎⠁⠀⠀⠈⠉⠆⠻⣿⣶⣀⣀⠀⠈⠓⠶⠶⠋⢁⣰⣾⣿⣭⡷⢖⣚⣿⠂⠌⣛⣻⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      ⢸⠁⠀⠀⠀⠀⠀⠀⠐⠲⠶⢄⠈⢿⣿⣿⣿⣿⣿⣷⡾⠿⠿⢿⣿⣞⠳⠾⣷⣻⢿⣯⠽⠛⠛⠉⣹⣿⣿⣿⣿⣿⣿⣿⣿⣝⢦⠀⠀⠀⠀⠀⠀⠀⠀
-      ⢸⠀⠀⢀⡠⠖⠛⠛⠛⠲⣄⡀⠑⠈⢿⣿⣿⣿⣿⣿⣿⣋⣩⠭⣒⣛⠭⡗⣶⠽⠛⠋⠉⠀⣀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡻⢧⡀⠀⠀⠀⠀⠀⠀
-      ⠸⡀⡠⠊⠉⠐⠲⢤⡂⢀⠀⠙⢦⡀⣀⠙⣿⣿⣿⣿⣿⣷⣶⠁⣲⣮⣝⣺⠷⠆⠀⠀⠀⣤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⣵⡀⠀⠀⠀⠀⠀
-      ⠀⠑⠁⠀⠀⠀⠀⠀⠈⠓⠷⣤⣠⣙⠻⠀⢸⣿⣿⣿⣿⣿⣿⣦⣶⡞⠉⠀⠀⠀⠀⠀⠸⠿⠛⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡀⠀⠀⠀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢤⠤⠝⠲⢿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠛⠁⠀⠀⠀⠀⠀⠴⠾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡄⠀⠀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠳⠁⠄⠀⠘⢿⣿⣿⣿⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣬⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠇⡀⠀⠀⠀⣽⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢹⠀⠀⠀⠀⢹⣿⣿⣿⣷⡂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣤⣤⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡆⠀⠀⠀⠘⣿⣿⡿⢟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠙⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡐⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡍⠀⠀⠀⠀⠀⣀⠤⠤⠤⠀⠒⠒⢤⡤⠴⠞⠛⠻⠿⠛⠛⠛⠛⠛⠛⠋⠙⣿⠏⢻⣻⣿⣿⣿⣿⣿⣿⣿⡇
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⡠⣶⠟⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠃⠙⠿⠻⢿⠿⠿⠿⡇
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    </pre>
 
-      &nbsp; Red-tailed hawks are working hard to earn a place in the hearts of their fellow New Yorkers.
-    </p>
-    <li><a href="../entries/Homepage.html" style="color: rgb(16, 212, 124); text-decoration: none;">Return to the homepage</a></li>
+    <li><a href="../entries/Homepage.html" style="color: rgb(21, 92, 178); text-decoration: none;" font-size:2em>Return to the homepage</a></li>
   <div class="hawkboxQwQ">
     <ul>
       <li>As of 2016, there were at least 20 red-tailed hawk nests in Manhattan. In 2010 there were just eight (The National Audubon Society, 2016)</li>
@@ -83,31 +37,127 @@
       <li>Pale Male, the famous red-tailed hawk and Manhattan resident, is believed to have fathered nearly 30 chicks in his lifetime (The National Audubon Society, 2016).d</li>
       <li>Migration does not occur often, but can be triggered by inadequate food resources. When it does occur, it takes place in the late fall and early spring in either an individual or group capacity.
       </li>
+      <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">
     </ul>
   </div>
   <div class="hawkpage">
     <a href=""class=selected>1</a><a href="">2</a><a href="">3</a><a href="">4</a><a href="">5</a><a href="">6</a><a href="">7</a><a href="">8</a><a href="">9</a><a href="">10</a>
   </div>
-  <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">
-  <div class="hawkintro">
-    <p>In many ways, the relationship between New Yorkers and red-tailed hawks (Buteo jamaicensis) is the ideal of human-wildlife coexistence. They provide free pest control for the city, with a majority of their diet consisting of rats and mice.</p>
-    <p class="bcd">In turn, the city works to cut down on the use of rat poisons in areas where the hawks nest so that they do not accidentally eat poisoned rodents.</p>
-    <p>QCity buildings and bridges also provide ideal nesting sites for urban hawks. It is an arrangement that benefits everyone involved—except, obviously, the rodents.</p>
+  <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">  <div class="hawkboxQwQ">
+    <ul>
+      <li>As of 2016, there were at least 20 red-tailed hawk nests in Manhattan. In 2010 there were just eight (The National Audubon Society, 2016)</li>
+      <li>Red-tailed hawks are top predators themselves and have no natural predators. Nonetheless, their eggs and nestlings are sometimes preyed on by great-horned owls, crows, raccoons, and red foxes.</li>
+      <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">
+      <li>There are approximately 2.3 million breeding individuals worldwide. Nearly 75% of all red-tailed hawks spend portions of the year in the United States (Cornell Lab or Ornithology, 2015).</li>
+      <li>Pale Male, the famous red-tailed hawk and Manhattan resident, is believed to have fathered nearly 30 chicks in his lifetime (The National Audubon Society, 2016).d</li>
+      <li>Migration does not occur often, but can be triggered by inadequate food resources. When it does occur, it takes place in the late fall and early spring in either an individual or group capacity.
+      </li>
+    </ul>
   </div>
-    <section>
-      <p Id="OwO">Do not feed red-tailed hawks. Red-tailed hawks are expert hunters and do not need help finding food. Feeding them can cause them to lose their natural hunting instincts.</p>
-      <p>Observe and enjoy red-tailed hawks from a distance. Adult red-tailed hawks should always be admired from afar using binoculars or a scope. If you see a juvenile on the ground, there's no need to approach it. The young bird is likely learning how to fly, and its parents may be nearby watching over it.</p>
-      <p>Use snap traps rather than poison to control rodent populations. Eating rodents that have been poisoned can make red-tailed hawks ill.</p>
-    </section>
-  </article>
-  <div>
-    
-  </div>
-  <aside>
-    side
-  </aside>
-  <footer>
-  
-  </footer>
+  <pre class="pixhawk">
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣤⣤⣤⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣤⣤⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⣿⡿⠿⠿⠛⠛⠛⠛⠻⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⣀⣀⣠⣤⡾⢿⣿⣿⠿⠟⠉⠉⠀⠀⣠⣴⣶⣖⠒⡤⠀⠠⢾⣿⣭⣭⣾⣛⣻⣿⣿⣿⣿⣯⣍⣛⡿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⢀⡴⠛⠉⢁⣀⠀⢤⡀⠹⣇⠀⠢⠂⠀⠤⣾⠹⣿⣷⣟⡴⠃⠀⣀⣼⣭⣟⠛⠯⠭⠼⠿⢿⣿⣿⣿⣿⣿⣯⣽⣻⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⢀⡟⠁⢀⠎⠁⠀⠀⠈⠉⠆⠻⣿⣶⣀⣀⠀⠈⠓⠶⠶⠋⢁⣰⣾⣿⣭⡷⢖⣚⣿⠂⠌⣛⣻⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⢸⠁⠀⠀⠀⠀⠀⠀⠐⠲⠶⢄⠈⢿⣿⣿⣿⣿⣿⣷⡾⠿⠿⢿⣿⣞⠳⠾⣷⣻⢿⣯⠽⠛⠛⠉⣹⣿⣿⣿⣿⣿⣿⣿⣿⣝⢦⠀⠀⠀⠀⠀⠀⠀⠀
+    ⢸⠀⠀⢀⡠⠖⠛⠛⠛⠲⣄⡀⠑⠈⢿⣿⣿⣿⣿⣿⣿⣋⣩⠭⣒⣛⠭⡗⣶⠽⠛⠋⠉⠀⣀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡻⢧⡀⠀⠀⠀⠀⠀⠀
+    ⠸⡀⡠⠊⠉⠐⠲⢤⡂⢀⠀⠙⢦⡀⣀⠙⣿⣿⣿⣿⣿⣷⣶⠁⣲⣮⣝⣺⠷⠆⠀⠀⠀⣤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⣵⡀⠀⠀⠀⠀⠀
+    ⠀⠑⠁⠀⠀⠀⠀⠀⠈⠓⠷⣤⣠⣙⠻⠀⢸⣿⣿⣿⣿⣿⣿⣦⣶⡞⠉⠀⠀⠀⠀⠀⠸⠿⠛⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢤⠤⠝⠲⢿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠛⠁⠀⠀⠀⠀⠀⠴⠾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡄⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠳⠁⠄⠀⠘⢿⣿⣿⣿⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣬⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠇⡀⠀⠀⠀⣽⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢹⠀⠀⠀⠀⢹⣿⣿⣿⣷⡂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣤⣤⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡆⠀⠀⠀⠘⣿⣿⡿⢟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠙⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡐⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡍⠀⠀⠀⠀⠀⣀⠤⠤⠤⠀⠒⠒⢤⡤⠴⠞⠛⠻⠿⠛⠛⠛⠛⠛⠛⠋⠙⣿⠏⢻⣻⣿⣿⣿⣿⣿⣿⣿⡇
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⡠⣶⠟⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠃⠙⠿⠻⢿⠿⠿⠿⡇
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  </pre>
+  <img src="../images/lingshi.jpg" alt="image of selling oysters">
+
 </body>
+<script>
+  let dancingWords = [];
+
+class DanceSpan {
+ constructor(element, x, y) {
+   element.position(x, y);
+   element.addClass('dancing-word'); // Add class for styling
+   this.element = element;
+   this.x = x;
+   this.y = y;
+   this.velX = random(1, 3);  // Slower initial horizontal velocity
+   this.velY = random(1, 3);  // Slower initial vertical velocity
+   this.clicked = false; // Track if the word has been clicked
+ }
+
+ brownian() {
+   // Update position with slightly slower movement
+   this.x += this.velX;
+   this.y += this.velY;
+
+   // Gradual acceleration to keep speed increasing but not too fast
+   this.velX *= 1.005;  // Slightly slower acceleration
+   this.velY *= 1.005;  // Slightly slower vertical acceleration
+
+   // Allow the word to "bounce" within the canvas boundaries
+   if (this.x > width || this.x < 0) {
+     this.velX *= -1;  // Reverse direction if it hits the edge
+   }
+   if (this.y > height || this.y < 0) {
+     this.velY *= -1;  // Reverse direction if it hits the edge
+   }
+
+   this.element.position(this.x, this.y);
+ }
+
+ // Check if the word is clicked
+ checkClick() {
+   let distance = dist(mouseX, mouseY, this.x, this.y);
+   return distance < 40; // Increase click range to make it easier
+ }
+
+ // Change background color and apply animation when clicked
+ changeColorAndEffect() {
+   if (this.clicked) {
+     this.element.addClass('clicked'); // Add the 'clicked' class to trigger styles
+   }
+ }
+}
+
+function setup() {
+ createCanvas(windowWidth, windowHeight); // Make the canvas size full screen
+ const paragraph = "Hello my name is kiara, nice to meet you remember to click on these words :D";
+ const words = paragraph.split(' ');
+
+ for (let j = 0; j < words.length; j++) {
+   const spannedWord = createSpan(words[j] + " ");
+   spannedWord.style('font-size', '2.5em');  // Increase font size
+   const dw = new DanceSpan(spannedWord, random(width), random(height));
+   dancingWords.push(dw);
+ }
+}
+
+function draw() {
+ background(255); // Set the background color
+
+ // Update each dancing word
+ for (let i = 0; i < dancingWords.length; i++) {
+   dancingWords[i].brownian();
+   dancingWords[i].changeColorAndEffect(); // Apply color and effect when clicked
+ }
+}
+
+function mousePressed() {
+ // Check if any word is clicked
+ for (let i = 0; i < dancingWords.length; i++) {
+   if (dancingWords[i].checkClick()) {
+     dancingWords[i].clicked = true; // Mark the word as clicked
+   }
+ }
+}
+</script>
 </html>
