--- a/entries/ENTRY10.html
+++ b/entries/ENTRY10.html
@@ -15,7 +15,7 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="../css/About.css">
+  <link rel="stylesheet" href="..">
   
   
 
