--- a/entries/ENTRY1.html
+++ b/entries/ENTRY1.html
@@ -15,7 +15,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  
+  <link rel="stylesheet" href="../css/reset.css">
+
+  <link rel="stylesheet" href="../css/About.css">
+
   
   
 
@@ -23,444 +26,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.ico">
 </head>
-<style>
 
-@import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dokdo&family=East+Sea+Dokdo&display=swap');
-:root {
---headingFont: 'Dokdo', "sans-serif";
---bodyFont: 'East Sea Dokdo', "sans-serif";
-}
-*{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
-}
-
-body{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background-image:url(../images/jpg);
-    background-size:cover;
-    font-family: 'Dokdo', "sans-serif"; 
-    --headingFont: 'Dokdo', "sans-serif";
-}
-#main {
-    height:100vh;
-    width:100vw;
-    display:flex;
-    justify-content: center;
-    align-items:center;
-}
-#click-section{
-    width:35%;
-    height:100%;
-    padding:20px 0;
-    position:relative;
-}
-#drawerboxes{
-    margin-left: 10%;
-    width:100%;
-    height:100%;
-    position:relative;
-    overflow: hidden;
-    display:flex;
-    flex-direction:column;
-    justify-content: space-evenly;
-}
-#drawerboxes::before {
-    content:"";
-    width:8px;
-    height:94%;
-    position:absolute;
-    left:-10px;
-    top:3%;
-    z-index:120;
-}
-.drawerbox {
-    height: calc(100%/ 5.5);
-    width:70%;
-    position:relative;
-    z-index: 100%;
-    transform:translateX(-70%);
-    transition:transform .5s ease-in-out;
-}
-.drawerbox.active{
-    transform:translateX(0);
-}
-.drawer-btn{
-    width:100%;
-    height:100%;
-    font: 800 30px;
-    background-color: rgb(175,190,255);
-    border:none;
-    transition:background-color .5s ease-in-out;
-    color:#ffffff00;
-}
-.drawer-btn.active{
-    background-image: url(../images/png);
-    background-size:cover;
-    color:rgb(70,100,180);
-}
-.drawer-btn:hover {
-    cursor:pointer;
-}
-.drawer-head{
-    position:absolute;
-    color: rgb(255,255,255);
-    font-size: 200px;
-    font-weight:700;
-    right:-38px;
-    top:calc(50% - 135px);
-    text-shadow:2px -1px 8px rgba(250,80,193,0.323);
-}
-#slide-section{
-    position:relative;
-    height: 100%;
-    width:65%;
-    display:flex;
-    justify-content:center;
-    padding:0 40px;
-    background: linear-gradient(to right bottom,
-    rgba(25, 255, 255, .6),
-    rgba(255,255,255,.3),
-    rgba(355,355,355,.2));
-    backdrop-filter:blur(11px);
-}
-#slide-bar{
-    position:absolute;
-    top:10%;
-    left:40px;
-    height:80%;
-    width:1px;
-    background-color:rgb(223,223,223);
-}
-#bar {
-    position:absolute;
-    height:calc(100%/4);
-    width:5px;
-    top:0;
-    left:-1.2px;
-    background-color:rgb(175,190,255);
-    transition:transform .5s ease-in-out; 
-}
-#card-section{
-    height:100%;
-    width:80%;
-    overflow:hidden;
-}
-.card{
-    display: flex;
-    flex-direction:column;
-    height:100%;
-    width:100%;
-    padding:10% 0;
-    color:white;
-    font-size: 30px;
-    transition:transform .5s ease-in-out;
-}
-.card-small-title{
-    font-size:30px;
-    font-weight:600;
-    padding-bottom:min(5%,10px);
-    color:rgb(70,100,180);
-}
-.card-title{
-    font-size:80px;
-    font-weight:700;
-    padding-bottom: min(20%,40px);
-    color:rgb(70,100,180);
-}
-.card-title{
-    font-size: 80px;
-    font-weight:700;
-    padding-bottom:min (20%,40px);
-    color:rgb(70,100,180);
-}
-.card-content{
-    font-size:24px;
-    font-weight:400;
-    color:rgb(94,123,255);
-    margin-bottom:60px;
-}
-.card-img{
-    width:100%;
-    height:400px;
-    overflow:hidden;
-}
-.card-img img{
-    width:100%;
-}
-.card-button {
-    position: absolute;
-    bottom: 60px; /* 按钮距离卡片顶部的距离 */
-    right: 60px; /* 按钮距离卡片右侧的距离 */
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-  }
-  
-  .card-button:hover {
-    background-color: #0056b3;
-  }
-  .card-button2 {
-    position: absolute;
-    bottom: 60px; /* 按钮距离卡片顶部的距离 */
-    right: 300px; /* 按钮距离卡片右侧的距离 */
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-  }
-
-
-
-
-  .type--A{
-    --line_color : #555555 ;
-    --back_color : #FFECF6  ;
-  }
-  .type--B{
-    --line_color : #1b1919 ;
-    --back_color : #E9ECFF
-  }
-  .type--C{
-    --line_color : #00135C ;
-    --back_color : #DEFFFA 
-  }
-  .button{
-      position : relative ;
-      z-index : 0 ;
-      width : 240px ;
-      height : 56px ;
-      text-decoration : none ;
-      font-size : 14px ; 
-      font-weight : bold ;
-      color : var(--line_color) ;
-      letter-spacing : 2px ;
-      transition : all .3s ease ;
-  }
-  .button__text{
-      display : flex ;
-      justify-content : center ;
-      align-items : center ;
-      width : 100% ;
-      height : 100% ;
-  }
-  .button::before,
-  .button::after,
-  .button__text::before,
-  .button__text::after{
-      content : '' ;
-      position : absolute ;
-      height : 3px ;
-      border-radius : 2px ;
-      background : var(--line_color) ;
-      transition : all .5s ease ;
-  }
-  .button::before{
-      top : 0 ;
-      left : 54px ;
-      width : calc( 100% - 56px * 2 - 16px ) ;
-  }
-  .button::after{
-      top : 0 ;
-      right : 54px ;
-      width : 8px ;
-  }
-  .button__text::before{
-      bottom : 0 ;
-      right : 54px ;
-      width : calc( 100% - 56px * 2 - 16px ) ;
-  }
-  .button__text::after{
-      bottom : 0 ;
-      left : 54px ;
-      width : 8px ;
-  }
-  .button__line{
-      position : absolute ;
-      top : 0 ;
-      width : 56px ;
-      height : 100% ;
-      overflow : hidden ;
-  }
-  .button__line::before{
-      content : '' ;
-      position : absolute ;
-      top : 0 ;
-      width : 150% ;
-      height : 100% ;
-      box-sizing : border-box ;
-      border-radius : 300px ;
-      border : solid 3px var(--line_color) ;
-  }
-  .button__line:nth-child(1),
-  .button__line:nth-child(1)::before{
-      left : 0 ;
-  }
-  .button__line:nth-child(2),
-  .button__line:nth-child(2)::before{
-      right : 0 ;
-  }
-  .button:hover{
-      letter-spacing : 6px ;
-  }
-  .button:hover::before,
-  .button:hover .button__text::before{
-      width : 8px ;
-  }
-  .button:hover::after,
-  .button:hover .button__text::after{
-      width : calc( 100% - 56px * 2 - 16px ) ;
-  }
-  .button__drow1,
-  .button__drow2{
-      position : absolute ;
-      z-index : -1 ;
-      border-radius : 16px ;
-      transform-origin : 16px 16px ;
-  }
-  .button__drow1{
-      top : -16px ;
-      left : 40px ;
-      width : 32px ;
-      height : 0;
-      transform : rotate( 30deg ) ;
-  }
-  .button__drow2{
-      top : 44px ;
-      left : 77px ;
-      width : 32px ;
-      height : 0 ;
-      transform : rotate(-127deg ) ;
-  }
-  .button__drow1::before,
-  .button__drow1::after,
-  .button__drow2::before,
-  .button__drow2::after{
-      content : '' ;
-      position : absolute ;
-  }
-  .button__drow1::before{
-      bottom : 0 ;
-      left : 0 ;
-      width : 0 ;
-      height : 32px ;
-      border-radius : 16px ;
-      transform-origin : 16px 16px ;
-      transform : rotate( -60deg ) ;
-  }
-  .button__drow1::after{
-      top : -10px ;
-      left : 45px ;
-      width : 0 ;
-      height : 32px ;
-      border-radius : 16px ;
-      transform-origin : 16px 16px ;
-      transform : rotate( 69deg ) ;
-  }
-  .button__drow2::before{
-      bottom : 0 ;
-      left : 0 ;
-      width : 0 ;
-      height : 32px ;
-      border-radius : 16px ;
-      transform-origin : 16px 16px ;
-      transform : rotate( -146deg ) ;
-  }
-  .button__drow2::after{
-      bottom : 26px ;
-      left : -40px ;
-      width : 0 ;
-      height : 32px ;
-      border-radius : 16px ;
-      transform-origin : 16px 16px ;
-      transform : rotate( -262deg ) ;
-  }
-  .button__drow1,
-  .button__drow1::before,
-  .button__drow1::after,
-  .button__drow2,
-  .button__drow2::before,
-  .button__drow2::after{
-      background : var( --back_color ) ;
-  }
-  .button:hover .button__drow1{
-      animation : drow1 ease-in .06s ;
-      animation-fill-mode : forwards ;
-  }
-  .button:hover .button__drow1::before{
-      animation : drow2 linear .08s .06s ;
-      animation-fill-mode : forwards ;
-  }
-  .button:hover .button__drow1::after{
-      animation : drow3 linear .03s .14s ;
-      animation-fill-mode : forwards ;
-  }
-  .button:hover .button__drow2{
-      animation : drow4 linear .06s .2s ;
-      animation-fill-mode : forwards ;
-  }
-  .button:hover .button__drow2::before{
-      animation : drow3 linear .03s .26s ;
-      animation-fill-mode : forwards ;
-  }
-  .button:hover .button__drow2::after{
-      animation : drow5 linear .06s .32s ;
-      animation-fill-mode : forwards ;
-  }
-  @keyframes drow1{
-      0%   { height : 0 ; }
-      100% { height : 100px ; }
-  }
-  @keyframes drow2{
-      0%   { width : 0 ; opacity : 0 ;}
-      10%  { opacity : 0 ;}
-      11%  { opacity : 1 ;}
-      100% { width : 120px ; }
-  }
-  @keyframes drow3{
-      0%   { width : 0 ; }
-      100% { width : 80px ; }
-  }
-  @keyframes drow4{
-      0%   { height : 0 ; }
-      100% { height : 120px ; }
-  }
-  @keyframes drow5{
-      0%   { width : 0 ; }
-      100% { width : 124px ; }
-  }
-  
-  
-  
-  
-  
-  
-  /* 本体には関係ないスタイル */
-  .container{
-      width : 100% ;
-      height : 300px ;
-      display : flex ;
-      flex-direction : column ;
-      justify-content : center ;
-      align-items : center ;
-  }
-  .button:not(:last-child){
-    margin-bottom : 64px ;
-  }
-
-</style>
 <body>
 
   <div id="main">
@@ -510,7 +76,7 @@ body{
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
           </div>
           <div class="card-img">
-            <img src="../images/oc/tnaks.jpg" alt="">
+            <img src="../images/未命名作品 8.jpg" alt="">
           </div>
         </div>
 
