--- a/entries/Red-tailed-hawk.html
+++ b/entries/Red-tailed-hawk.html
@@ -30,7 +30,7 @@
 
     <li><a href="../entries/Homepage.html" style="color: rgb(21, 92, 178); text-decoration: none;" font-size:2em>Return to the homepage</a></li>
   <div class="hawkboxQwQ">
-    <ul>
+    <ul class="left-list">
       <li>As of 2016, there were at least 20 red-tailed hawk nests in Manhattan. In 2010 there were just eight (The National Audubon Society, 2016)</li>
       <li>Red-tailed hawks are top predators themselves and have no natural predators. Nonetheless, their eggs and nestlings are sometimes preyed on by great-horned owls, crows, raccoons, and red foxes.</li>
       <li>There are approximately 2.3 million breeding individuals worldwide. Nearly 75% of all red-tailed hawks spend portions of the year in the United States (Cornell Lab or Ornithology, 2015).</li>
@@ -44,7 +44,7 @@
     <a href=""class=selected>1</a><a href="">2</a><a href="">3</a><a href="">4</a><a href="">5</a><a href="">6</a><a href="">7</a><a href="">8</a><a href="">9</a><a href="">10</a>
   </div>
   <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">  <div class="hawkboxQwQ">
-    <ul>
+    <ul class="right-list">
       <li>As of 2016, there were at least 20 red-tailed hawk nests in Manhattan. In 2010 there were just eight (The National Audubon Society, 2016)</li>
       <li>Red-tailed hawks are top predators themselves and have no natural predators. Nonetheless, their eggs and nestlings are sometimes preyed on by great-horned owls, crows, raccoons, and red foxes.</li>
       <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">
