--- a/entries/ENTRY1.html
+++ b/entries/ENTRY1.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Enter if you dare</title>
+  <title>Eastern Gray Squirre</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -26,7 +26,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.ico">
 </head>
-
+<style>
+  body{background-image: linear-gradient(#191970, #CCCCFF);}
+</style>
 <body>
 
   <div id="main">
@@ -34,28 +36,28 @@
       <div id="drawerboxes">
         <div class="drawerbox active">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            About this space
             <span class="drawer-head">1</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Top Location
             <span class="drawer-head">2</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Good Breakfast
             <span class="drawer-head">3</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Reserve
             <span class="drawer-head">4</span>
           </button>
         </div>
@@ -70,64 +72,65 @@
       </div>
       <div id="card-section">
         <div id="card1" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Eastern Gray Squirrel</div>
+          <div class="card-title">A Cozy Drey</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Some tree-top nests, known as “dreys,” made from twigs, leaves, and soft materials. They are sturdy and warm, safe from predators, suited for rainy days or chilly nights.
           </div>
           <div class="card-img">
-            <img src="../images/未命名作品 8.jpg" alt="">
+            <img src="../images/entriesimg/squirrel/sss.png" alt="">
           </div>
         </div>
 
         <div id="card2" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Top Location</div>
+          <div class="card-title">Central Park</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            One of the most famous gray squirrel habitats, boasting vast woodlands, open meadows, and an endless buffet of oak treats!
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/map.png" alt="">
           </div>
         </div>
 
         <div id="card3" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Good Breakfast</div>
+          <div class="card-title">Chestnuts</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+              Start the day right with acorns and chestnuts—nature’s crunchy, energy-packed delights, fueling every leap, dash, and climb!
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/entriesimg/squirrel/IMG_1701.PNG" alt="">
           </div>
         </div>
 
         <div id="card4" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Squirrel Drey</div>
+          <div class="card-title">Reserve Now</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Reserve Your Spot in the Squirrel Drey!
+            Why did the squirrel book a drey? Because even nuts need a place to chill! 🐿️🏡✨   
           </div>
           <div class="container">
 
-            <a href="#" class="button type--A">
+            <a href="../entries/Squirrels.html" class="button type--A">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text" >Sure!</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--B">
+              <a href="../index.html" class="button type--B">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">No thanks</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--C">
+              <a href="../entries/ENTRY2.html" class="button type--C">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">See other options</a></span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
