--- a/entries/Oyster.html
+++ b/entries/Oyster.html
@@ -37,42 +37,44 @@
       Pop-up oyster
     </a>
     <audio src="../images/undertheseaosyter.m4a"controls autoplay loop></audio>
-    <p>
+    <p style="font-size: 2em;">
     <pre>
       𓆉𓆝 𓆟 𓆞 𓆝 𓆟𓇼
       ˚｡⋆🦪🐚˚｡🦪⚪✨
       ⋆𓆉𓆝 𓆟 𓆞 𓆝 𓆟𓇼
     </pre>
 
-      &nbsp; Hello fellow oysters! I’m part of a growing community in New York Harbor, and I’m calling out to you to join me in our vital mission: restoring the natural balance of our home. Once, oysters like us covered this harbor, filtering water, creating habitats, and even protecting the city from storms. But now, it’s time for a comeback, and we need your help.
+      <p style="font-size: 1.5em;">
+       New York’s oyster history dates back to the early 1600s, when Native American tribes were already enjoying the abundance of oysters in the region’s waters. European settlers quickly caught on, and oysters became a key part of the city’s diet and economy. By the 19th century, New York was the oyster capital of the world, with massive oyster beds in the New York Harbor and beyond. The bivalves were so plentiful that they were sold everywhere—from street vendors to upscale restaurants. Unfortunately, overharvesting and pollution led to the decline of oyster populations by the 20th century. However, recent efforts to restore oyster habitats have sparked a resurgence, making New York’s oysters a symbol of both the city’s history and its commitment to environmental revival. 🦪🌊
+      </p>
     </p>
 
-    <img src="../images/Oysters/colorful-tank.jpg" alt="image of selling oysters" class="tank" onclick="changeImage(this)">    <li><a href="../entries/Homepage.html" style="color: rgb(16, 212, 124); text-decoration: none;">Return to the homepage</a></li>
+    <img src="../images/Oysters/colorful-tank.jpg" alt="image of selling oysters" class="tank" onclick="changeImage(this)">    <li><a href="../entries/Homepage.html" style="color: rgb(15, 120, 211); text-decoration: none; font-size: 1.5em;">Return to the homepage</a></li>
 
     <!--catalogs-->
-    <a href="#chapter1">Interesting Fact1</a>
-    <a href="#chapter2">Interesting Fact2</a>
-    <a href="#chapter3">Interesting Fact3</a>
-    <a href="#chapter4">Interesting Fact4</a>
-    <a href="#chapter5">Interesting Fact5</a>
-    <a href="#chapter6">Interesting Fact6</a>
+    <a href="#chapter1">Filtration</a>
+    <a href="#chapter2">Protection</a>
+    <a href="#chapter3">Rhythm</a>
+    <a href="#chapter4">Habitat</a>
+    <a href="#chapter5">Climate</a>
+    <a href="#chapter6">Clarity</a>
     
-    <h2 id="chapter1">Interesting Fact1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, harum excepturi modi labore cupiditate repellat quibusdam animi sapiente ipsum deserunt ducimus minus commodi delectus non architecto veritatis, error similique nesciunt.</p>
+    <h2 id="chapter1">Filtration</h2>
+    <p>Oysters are nature’s water purifiers. A single oyster can filter up to 50 gallons of water a day, removing harmful particles, excess nutrients, and pollutants from the water, helping to improve water quality and prevent algae blooms that can suffocate marine life. Their filtration process is vital for maintaining healthy aquatic ecosystems. 🌊🐚</p>
     <img class="ss" src="../images/Oysters/pixoyster/blueoyster.png" alt="image of selling oysters">
-    <h2 id="chapter2">Interesting Fact2</h2>
-    <p>Minima itaque ipsam, tenetur quam, excepturi illo dolor laborum suscipit animi quidem pariatur! Neque, facilis temporibus. Aperiam maxime neque dolor omnis et accusamus ipsa officia, quia vero cum sapiente enim.</p>
+    <h2 id="chapter2">Protection</h2>
+    <p>Oyster reefs act as natural barriers, protecting coastal areas from erosion and storm surges. By absorbing the force of waves, they help reduce shoreline damage, prevent flooding, and protect habitats for many species of marine life. This natural defense is crucial for maintaining the integrity of coastal ecosystems. 🌊🏖️</p>
     <img class="ss" src="../images/Oysters/pixoyster/bluegreenoyster.png" alt="image of selling oysters">
-    <h2 id="chapter3">Interesting Fact3</h2>
-    <p>Officia facilis nam dignissimos, sequi expedita quo eum voluptatem ea deserunt esse, quod, eveniet explicabo repellat sit ut? Qui ex assumenda necessitatibus voluptatibus odio, ab aperiam optio nisi reiciendis ut?</p>
+    <h2 id="chapter3">Rhythm</h2>
+    <p>Oysters follow a fascinating sleep cycle. During the day, they open their shells to feed on plankton and tiny particles suspended in the water. At night, they close their shells and rest, conserving energy. This daily routine helps them efficiently filter water while maintaining a sustainable feeding schedule. 🦪💤</p>
     <img class="ss" src="../images/Oysters/pixoyster/greenoyster.png" alt="image of selling oysters">
-    <h2 id="chapter4">Interesting Fact4</h2>
-    <p>Molestias dolores dolore, dignissimos assumenda quis veritatis doloribus quasi repellendus similique possimus, ullam libero facere odit architecto tempora labore! Ex omnis quos pariatur architecto minima harum praesentium sequi quisquam veniam?</p>
+    <h2 id="chapter4">Habitat</h2>
+    <p>Oyster reefs provide essential habitats for a variety of marine creatures. The complex structure of their reefs creates a home for fish, crabs, and other species that rely on the shelter and protection of the oysters’ hard shells. These reefs boost biodiversity by offering a place for many organisms to thrive. 🐠🌿</p>
     <img class="ss" src="../images/Oysters/pixoyster/sleepingoyster.png" alt="image of selling oysters">
-    <h2 id="chapter5">Interesting Fact5</h2>
-    <p>Quisquam rerum ad perferendis ab, recusandae fugiat, a architecto laudantium, sint vitae necessitatibus eum? Amet perspiciatis aliquid, dolorum exercitationem cupiditate consequuntur culpa, quas a, quam numquam voluptas quibusdam provident repudiandae.</p>
-    <h2 id="chapter6">Interesting Fact6</h2>
-    <p>Harum magnam nostrum consequuntur odio doloribus minus fuga nisi laudantium vitae eum dolorum repellendus, praesentium incidunt pariatur voluptates velit culpa placeat atque error tempora exercitationem quaerat animi ipsum? Ex, laboriosam!</p>   
+    <h2 id="chapter5">Climate</h2>
+    <p>Oysters play an unexpected role in the fight against climate change. As they grow, they absorb carbon dioxide from the water and use it to form their shells. This process helps sequester carbon, reducing the overall concentration of CO2 in the environment. Oysters, though small, are an important part of our carbon reduction efforts. 🌍🦪</p>
+    <h2 id="chapter6">Clarity</h2>
+    <p>By filtering large quantities of water, oysters improve water clarity. As they remove suspended particles and pollutants, they allow more sunlight to penetrate deeper into the water, which benefits underwater plants that rely on sunlight for photosynthesis. This contributes to the overall health of marine ecosystems by supporting plant life that sustains fish and other creatures. 🌿💧</p>   
     </P>
 
     <a href="#">Return to Top</a> 
