--- a/entries/Red-tailed-hawk.html
+++ b/entries/Red-tailed-hawk.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Red Tailed Hawk</title>
+  <title>Red-tailed Hawk</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -28,7 +28,7 @@
 <body>
   <h1>Red Tailed Hawk</h1>
 
-    <li><a href="../entries/Homepage.html" style="color: rgb(21, 92, 178); text-decoration: none;" font-size:2em>Return to the homepage</a></li>
+    <li><a href="../index.html" style="color: rgb(21, 92, 178); text-decoration: none;" font-size:2em>Return to the homepage</a></li>
     <pre class="pixhawk">
       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣤⣤⣤⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣤⣤⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
@@ -59,25 +59,28 @@
       <li>Pale Male, the famous red-tailed hawk and Manhattan resident, is believed to have fathered nearly 30 chicks in his lifetime (The National Audubon Society, 2016).d</li>
       <li>Migration does not occur often, but can be triggered by inadequate food resources. When it does occur, it takes place in the late fall and early spring in either an individual or group capacity.
       </li>
-      <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">
+      <img class="ss" src="../images/entriesimg/hawk/IMG_1732.JPG" alt="image of selling oysters">
     </ul>
   </div>
   <div class="hawkpage">
     <a href=""class=selected>1</a><a href="">2</a><a href="">3</a><a href="">4</a><a href="">5</a><a href="">6</a><a href="">7</a><a href="">8</a><a href="">9</a><a href="">10</a>
   </div>
     <ul>
-      <li>As of 2016, there were at least 20 red-tailed hawk nests in Manhattan. In 2010 there were just eight (The National Audubon Society, 2016)</li>
-      <li>Red-tailed hawks are top predators themselves and have no natural predators. Nonetheless, their eggs and nestlings are sometimes preyed on by great-horned owls, crows, raccoons, and red foxes.</li>
-      <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">
-      <li>There are approximately 2.3 million breeding individuals worldwide. Nearly 75% of all red-tailed hawks spend portions of the year in the United States (Cornell Lab or Ornithology, 2015).</li>
-      <img class="ss" src="../images/lingshi/Red_Tailed_Hawk_Perched_iStock-800px.jpg" alt="image of selling oysters">  <div class="hawkboxQwQ">
-      <li>Pale Male, the famous red-tailed hawk and Manhattan resident, is believed to have fathered nearly 30 chicks in his lifetime (The National Audubon Society, 2016).d</li>
-      <li>Migration does not occur often, but can be triggered by inadequate food resources. When it does occur, it takes place in the late fall and early spring in either an individual or group capacity.
+      <li>Early Bird Gets the Prey!
+        Red-tailed hawks are early risers, preferring to hunt at dawn when the low light makes it harder for prey to spot them. 🌅🦅</li>
+      <img class="ss" src="../images/entriesimg/hawk/IMG_1731.JPG" alt="image of selling oysters">
+      <li>Hawks Need Their Naps Too!
+        While they’re active during the day, red-tailed hawks often take short breaks to rest on tree branches, enjoying a midday snooze. 🦅💤</li>
+      <img class="ss" src="../images/entriesimg/hawk/IMG_1728.JPG" alt="image of selling oysters">  <div class="hawkboxQwQ">
+      <li>Simple Nightlife
+        Unlike some nocturnal birds, red-tailed hawks aren’t night hunters. They typically rest in their nests at night, gearing up for another busy day. 🌙🦅</li>
+      <li>Raising Junior Hawks
+        The female usually lays 2-3 eggs, and both parents take turns incubating them. Once the chicks hatch, they’re fed by both mom and dad until they’re strong enough to fly. 🦅🥚
       </li>
     </ul>
   </div>
 
-  <img src="../images/lingshi.jpg" alt="image of selling oysters">
+  <img src="../images/entriesimg/hawk/IMG_1714.JPG" alt="image of selling oysters">
 
 </body>
 <script>
@@ -131,7 +134,7 @@ class DanceSpan {
 
 function setup() {
  createCanvas(windowWidth, windowHeight); // Make the canvas size full screen
- const paragraph = "Hello my name is kiara, nice to meet you remember to click on these words :D";
+ const paragraph = "The red-tailed hawk glides effortlessly through the sky, mastering the art of soaring with its broad wings and keen eyes. 🦅✨";
  const words = paragraph.split(' ');
 
  for (let j = 0; j < words.length; j++) {
