--- a/entries/Squirrels.html
+++ b/entries/Squirrels.html
@@ -20,35 +20,35 @@
 </head>
 <body>
     <div class="shell">
-        <div class="tall"><span>1</span></div>
-        <div><span>2</span></div>
-        <div><span>3</span></div>
-        <div class="wide"><span>4</span></div>
-        <div><span>5</span></div>
-        <div class="tall"><span>6</span></div>
-        <div class="big"><span>7</span></div>
-        <div><span>8</span></div>
-        <div class="wide"><span>9</span></div>
-        <div class="big"><span>10</span></div>
-        <div class="tall"><span>11</span></div>
-        <div><span>12</span></div>
-        <div><span>13</span></div>
-        <div><span>14</span></div>
-        <div><span>15</span></div>
-        <div class="wide"><span>16</span></div>
-        <div><span>17</span></div>
-        <div><span>18</span></div>
-        <div class="wide"><span>19</span></div>
-        <div><span>20</span></div>
-        <div class="wide"><span>21</span></div>
-        <div class="big"><span>22</span></div>
-        <div><span>23</span></div>
-        <div><span>24</span></div>
-        <div class="big"><span>25</span></div>
-        <div class="tall"><span>26</span></div>
-        <div><span>27</span></div>
-        <div><span>28</span></div>
-        <div><span>29</span></div>
+        <div class="tall"><span>Squirrels take naps like pros. They snooze up to 18 hours a day, making them the true champions of the “sleepyhead” Olympics. 🐿️💤</span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1704.PNG" alt="Image 1"></span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1693.PNG" alt="Image 1"></span></div>
+        <div class="wide"><span>Squirrels don’t need alarm clocks. They wake up at dawn, as if they’re off to a breakfast buffet of acorns. Who needs coffee? 🐿️🌰</span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1696.PNG" alt="Image 1"></span></div>
+        <div class="tall"><span>Owls don’t mess around. The nighttime predator swoops down silently, but squirrels have perfected the art of playing “hide and squeak” under moonlight. 🦉🐿️</span></div>
+        <div class="big"><span><img src="../images/entriesimg/squirrel/IMG_1705.PNG" alt="Image 1"></span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1694.PNG" alt="Image 1"></span></div>
+        <div class="wide"><span>Night shift squirrels exist! Some squirrels are nocturnal, probably because they’re late-night snackers who binge on acorns under the moonlight. 🌙🌰</span></div>
+        <div class="big"><span><img src="../images/entriesimg/squirrel/IMG_1702.PNG" alt="Image 1"></span></div>
+        <div class="tall"><span>Squirrel yoga is real. They stretch, leap, and twist with grace, proving that squirrels have mastered the art of early morning stretches! 🐿️🧘‍♂️</span></div>
+        <div><span>Squirrels can’t stop hoarding. They spend most of their waking hours hiding food, probably because they don’t want to run out of snacks during their naps! 🐿️🥜</span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1708.PNG" alt="Image 1"></span></div>
+        <div><span>₍ᐢ•ﻌ•ᐢ₎✧˖°.🪲</span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1697.PNG" alt="Image 1"></span></div>
+        <div class="wide"><span>Hawks are squirrel’s aerial enemies. When a squirrel hears the call of a hawk, it turns into a furry speedster, with a dash of “whoops, not today!” 🦅🐿️</span></div>
+        <div><span>₍ᐢ•ﻌ•ᐢ₎✧˖°.🍞</span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1698.PNG" alt="Image 1"></span></div>
+        <div class="wide"><span>The acorn stash is real. Squirrels can bury thousands of acorns in a season, which means they’ve got a better savings plan than most humans! 🐿️💸</span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1703.PNG" alt="Image 1"></span></div>
+        <div class="wide"><span>Squirrels don’t have time for drama. They’d rather focus on their nuts than get involved in tree gossip. Quietly running the forest economy! 🐿️🍂</span></div>
+        <div class="big"><span><img src="../images/entriesimg/squirrel/IMG_1706.PNG" alt="Image 1"></span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1695.PNG" alt="Image 1"></span></div>
+        <div><span><a href="../index.html"><button class="button-32" role="button">BACK</button></a></span></div>
+        <div class="big"><span>Squirrel “time travel” exists. They hide food for winter, but forget where they put some, helping new trees grow. Accidental forest architects! 🐿️🌳</span></div>
+        <div class="tall"><span>Squirrels love a good challenge. They spend hours hiding food in places that require ninja-level skills, proving they’re nature’s puzzle experts! 🐿️🔍</span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1707.PNG" alt="Image 1"></span></div>
+        <div><span><img src="../images/entriesimg/squirrel/IMG_1699.PNG" alt="Image 1"></span></div>
+        <div><span>₍ᐢ•ﻌ•ᐢ₎✧˖°.🌰</span></div>
     </div>
 </body>
 </html>
