--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         body {
             width: 100%;
             margin: 0;
-            background-color: #162231;
+            background-color:#191970;
             color: white;
             font-size:xx-large;
         }
@@ -62,11 +62,13 @@
             display: flex;
             justify-content: center;
             gap: 1rem;
+
         }
 
         .custom-button {
             background-color: #4B3D29;
             border: none;
+            border-radius: 50px;
             color: white;
             padding: 10px 20px;
             cursor: pointer;
@@ -152,17 +154,20 @@
             <div class="logo">Kiara</div>
             <nav>
                 <ul style="list-style-type: none; padding: 0; display: flex; gap: 1rem;">
-                    <li><a href="../entries/Oyster.html" style="color: white; text-decoration: none;">Oysters</a></li>
-                    <li><a href="../entries/Red-tailed-hawk.html" style="color: white; text-decoration: none;">Red-tailed-hawk</a></li>
+                    <li><a href="/index.html" style="color: white; text-decoration: none;">Reload</a></li>
+                    <li><a href="/entries/seeya.html" style="color: white; text-decoration: none;">seeya</a></li>
                     <!-- Add the cart display -->
-                    <li><span id="cartCount">🛒 Cart: 0</span></li>
+                    <li><span id="cartCount" style="position: fixed; top: 20px; right: 20px; cursor: pointer; font-size: 24px;
+                        background-color: #CCCCFF;
+                        color: white;
+                        padding: 10px;
+                        border-radius: 50%;
+                        text-align: center;">🛒 Cart: 0</span></li>
                 </ul>
             </nav>
         </div>
     </header>
 <!-- Cart Icon -->
-<div id="cartIcon" style="position: fixed; top: 20px; right: 20px; cursor: pointer;">
-    🛒 <span id="cartItemCount">0</span>
 </div>
 
 <!-- Shopping Cart Sidebar -->
@@ -193,63 +198,63 @@
         <section class="secondary-block">
             <div class="grid-container">
                 <div class="card">
-                    <a href="entries/Squirrels.html">
+                    <a href="entries/ENTRY1.html">
                         <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>Squirrel <button class="add-to-cart">➕</button></p>
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/Oyster.html">
-                        <img src="mages/Oysters/pixoyster/sleepingoyster.png" alt="Squirrel Dreys">
-                        <p>Oyster <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY2.html">
+                        <img src="images/entriesimg/hawk/IMG_1717.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/Red-tailed-hawk.html">
-                        <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>hawk <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY3.html">
+                        <img src="images/entriesimg/oyster/IMG_1744.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/Dog-and-Cat.html">
+                    <a href="entries/ENTRY4.html">
                         <img src="images/oc/pin.png" alt="Squirrel Dreys">
-                        <p>Dog-cat <button class="add-to-cart">➕</button></p>
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/test1.0.html">
-                        <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>Opossum <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY5.html">
+                        <img src="images/entriesimg/Beaver/IMG_1736.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/test3.0.html">
-                        <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>Opossum <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY6.html">
+                        <img src="images/entriesimg/opossum/IMG_1746.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/test6.0.html">
-                        <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>Opossum <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY7.html">
+                        <img src="images/entriesimg/waterbird/IMG_1827.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/test5.0.html">
-                        <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>Opossum <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY8.html">
+                        <img src="images/entriesimg/pigeon/IMG_1769.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/changed.html">
-                        <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>Opossum <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY9.html">
+                        <img src="images/entriesimg/snake/IMG_1793.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/test4.0.html">
-                        <img src="images/squirrel.png" alt="Squirrel Dreys">
-                        <p>Opossum <button class="add-to-cart">➕</button></p>
+                    <a href="entries/ENTRY10.html">
+                        <img src="images/entriesimg/rats/IMG_1792.PNG" alt="Squirrel Dreys">
+                        <p><button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
             </div>
