--- a/entries/ENTRY2.html
+++ b/entries/ENTRY2.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Enter if you dare</title>
+  <title>Red-tailed Hawk</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,7 +15,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="../css/reset.css">
+
   <link rel="stylesheet" href="../css/About.css">
+
   
   
 
@@ -23,6 +26,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.ico">
 </head>
+<style>
+  body{background-image: linear-gradient(#0000ff, #CCCCFF);}
+</style>
 <body>
 
   <div id="main">
@@ -30,28 +36,28 @@
       <div id="drawerboxes">
         <div class="drawerbox active">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            About this space
             <span class="drawer-head">1</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Top Location
             <span class="drawer-head">2</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Good Breakfast
             <span class="drawer-head">3</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Reserve
             <span class="drawer-head">4</span>
           </button>
         </div>
@@ -66,64 +72,65 @@
       </div>
       <div id="card-section">
         <div id="card1" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Red-Tailed Hawk</div>
+          <div class="card-title">A Majestic Eyrie</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Perched atop towering cliffs, this eyrie offers unrivaled views, cozy nests, and a front-row seat to the heavens. Perfect for those who soar above the rest. 🦅🏞️
           </div>
           <div class="card-img">
-            <img src="../images/oc/tnaks.jpg" alt="">
+            <img src="../images/entriesimg/contain/IMG_1833.PNG" alt="">
           </div>
         </div>
 
         <div id="card2" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Top Location</div>
+          <div class="card-title">Central Park</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            With rich trees, open meadows, and water, Central Park is perfect for hawks to hunt and perch—soaring above in search of prey! 🦅🌳
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/map.png" alt="">
           </div>
         </div>
 
         <div id="card3" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Good Breakfast</div>
+          <div class="card-title">Rodents</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+           Small rodents are the perfect breakfast—quick, crunchy, and fresh, making every hunt an exhilarating, tasty triumph! 🦅🐿️
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/entriesimg/hawk/IMG_1739.PNG" alt="">
           </div>
         </div>
 
         <div id="card4" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Hawk Eyrie</div>
+          <div class="card-title">Reserve Now</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Reserve Your Spot at the Hawk Eyrie!
+            Soar high above the city in a majestic eyrie, where breathtaking views and a front-row seat to nature’s drama await. 🦅🌆
           </div>
           <div class="container">
 
-            <a href="#" class="button type--A">
+            <a href="../entries/Red-tailed-hawk.html" class="button type--A">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text" >Sure!</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--B">
+              <a href="../index.html" class="button type--B">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">No thanks</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--C">
+              <a href="../entries/ENTRY3.html" class="button type--C">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">See other options</a></span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
